upd: 1ra documentacion con swagger
