# routes/api.php
@@ -24,8 +24,8 @@ Route::middleware('auth:sanctum')->group(function() {
     Route::get('v1/auth/user', function (Request $request) {
         return 'Bienvenido, ' . auth()->user()->fullname;
     });
-    Route::get('v1/users/all', [UserController::class, 'index']);
-    Route::post('v1/users/new-user', [UserController::class, 'store']);
+    Route::get('v1/users', [UserController::class, 'index']);
+    Route::post('v1/users', [UserController::class, 'store']);
     Route::get('v1/auth/logout', [AuthController::class, 'logout']);
 });
 
